<resources>
    <string name="app_name">Momentum Analytics</string>
    <string name="emptyString"/>
    <string name="perm">"Access to the camera is needed in order to scan QR codes.</string>
    <string name="msg">The QR scanner cannot be started because camera permission was not granted.</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="link">Website</string>
    <string name="log_out">Log Out</string>
    <string name="an_image_related_to_the_ad">An image related to the ad.</string>
    <string name="login_portal_background_image">Login portal background image.</string>
    <string name="justin">Justin</string>
    <string name="jane">Jane</string>
    <string name="johnny">Johnny</string>
    <string name="lenny">Lenny</string>
    <string name="users">Users</string>
    <string name="wendy">Wendy</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="age">Age</string>
    <string name="major">Major</string>
    <string name="gender">Gender</string>
    <string name="button_to_log_out_of_user_profile">Button to log out of user profile</string>
    <string name="banner_image_for_user_profile">Banner image for user profile</string>
    <string name="_1_tap_the_button">1) Tap the button.</string>
    <string name="_2_scan_the_qr_code">2) Scan the QR code.</string>
    <string name="_3_wait_for_the_ads_to_load">3) Wait for the ads to load.</string>
</resources>