<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_margin="0dp">

    <TextView
        android:id="@+id/ad_title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/emptyString"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/ad_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/photo"
        android:scaleType="centerCrop" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photo"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/details"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="23sp"
                android:textStyle="normal|bold"
                android:fontFamily="sans-serif" />

            <TextView
                android:text="@string/emptyString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ad_details"
                android:textSize="17sp"
                android:layout_alignTop="@+id/details"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="normal|bold"
                android:fontFamily="sans-serif"
                android:textSize="23sp"
                android:layout_marginTop="15dp"
                android:layout_above="@+id/link_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/emptyString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ad_description"
                android:textSize="17sp"
                android:layout_marginTop="4dp"
                android:layout_alignTop="@+id/details"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/link_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="normal|bold"
                android:layout_marginTop="15dp"
                android:layout_above="@+id/ad_link"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="23sp" />

            <TextView
                android:text="@string/emptyString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ad_link"
                android:textSize="17sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>